# db-replicator

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  readme.md
scripts/: init.sh  setup.sh
src/: config.hpp  main.cpp  replicator.cpp  replicator.hpp
